minificando arquivos, alterando ALT das imagens e estrutura padrão geral do sistema

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>Quem somos</title>
-    <link rel="stylesheet" href="Estilos/Geral.css" media="all" />
+    <link rel="stylesheet preload" href="Estilos/Geral.css" media="all" />
     <link rel="stylesheet" href="Estilos/quemsomos.css" />
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
     <script defer src="Script-js/quemsomos.js"></script>
@@ -21,14 +21,14 @@
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
-            alt="Botão de ir pro Usúario"
+            alt="Botão de ir pra Artistas"
             tabindex="1"
             title="Nossos artistas"
         /></a>
         <a href="Quem somos.html">
           <img
             src="Imagens/Empresa.png"
-            alt="Botão de ir pro Usúario"
+            alt="Botão de ir para a página sobre a Tá que Tá"
             tabindex="1"
             title="Quem somos"
         /></a>
@@ -37,7 +37,7 @@
         <a href="index.html">
           <img
             src="Imagens/homeIcon.png"
-            alt="Botão de ir pro Usúario"
+            alt="Botão de ir para a página Inicial"
             title="Página inicial"
         /></a>
         <div id="botão_abrir_login">
@@ -57,7 +57,7 @@
       <div id="nav_aberta" style="display: none"></div>
     </header>
     <main>
-      <div id="inicio" style="height: 16%;"></div>
+      <div id="inicio" style="height: 16%"></div>
       <h1>Tá Que Tá</h1>
       <h2>Sobre Nós!</h2>
       <!--caixa que abrange toda a tela-->
@@ -123,12 +123,16 @@
     <div id="caixa_login" style="display: none">
       <h1 style="display: inline">Login</h1>
       <label for="fechar_login">
-        <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
+        <img
+          class="botaofechar"
+          src="Imagens/fecharIcon.png"
+          alt="Fechar Login"
+          loading="lazy"
       /></label>
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy"
         /></label>
         <input
           type="text"
@@ -139,7 +143,7 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha"
+          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy"
         /></label>
         <input
           type="password"
@@ -193,42 +197,51 @@
           id="emojis_avaliacao_1"
           class="emojis_avaliacao"
           src="Imagens/nota5Icon.png"
-          alt=""
+          alt="òtimo"
           title="Ótimo"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_2"
           class="emojis_avaliacao"
           src="Imagens/nota4Icon.png"
-          alt=""
+          alt="Bom"
           title="Bom"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_3"
           class="emojis_avaliacao"
           src="Imagens/nota3Icon.png"
-          alt=""
+          alt="Mediano"
           title="Mediano"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_4"
           class="emojis_avaliacao"
           src="Imagens/nota2Icon.png"
-          alt=""
+          alt="Ruim"
           title="Ruim"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_5"
           class="emojis_avaliacao"
           src="Imagens/nota1Icon.png"
-          alt=""
+          alt="Péssimo"
           title="Péssimo"
+          loading="lazy"
         />
       </div>
     </div>
     <!--Botão de voltar ao topo-->
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
-      <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
+      <img
+        id="img-botão-voltar"
+        src="Imagens/setaCima.png"
+        alt="Voltar ao topo da página"
+      />
     </a>
     <!--Caixa de suporte-->
     <div id="Caixa_suporte" style="display: none">
@@ -237,8 +250,9 @@
         class="botaofechar"
         id="botao_fechar_suporte"
         src="Imagens/fecharIcon.png"
-        alt=""
+        alt="Fechar caixa de Suporte"
         style="right: 0%; position: absolute; width: 70px"
+        loading="lazy"
       />
       <div id="container_mensagens"></div>
       <div id="container_botoes_suporte">
@@ -255,20 +269,25 @@
         <img
           id="apagar_historico"
           src="Imagens/lixeiraIcon.png"
-          alt=""
+          alt="Apagar Histórico"
           title="Apagar conversa com o suporte."
+          loading="lazy"
         />
       </div>
     </div>
 
     <div id="botão-suporte" title="Suporte">
-      <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
+      <img
+        id="img-botão-suporte"
+        src="Imagens/suporteIcon.png"
+        alt="Abrir Suporte"
+      />
     </div>
     <!--créditos e botão de alterar sua visibilidade-->
     <img
       id="creditos_toggle"
       src="Imagens/expandirCreditoIcon.png"
-      alt=""
+      alt="Exibir Créditos"
       title="Alterar visibilidade dos créditos"
     />
     <footer>
