--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
-    <title>Pagina Inicial</title>
+    <title>Página Inicial</title>
     <!--320 - 480 celular
     481 - 768 tablet
     769 - 1024 telas laptop
     1025 - 1200 pc -->
-    <link rel="stylesheet" href="Estilos/Geral.css" />
+    <link rel="stylesheet preload" href="Estilos/Geral.css" />
     <link rel="stylesheet" href="Estilos/index.css" media="all" />
     <link rel="shortcut icon" href="Imagens/favicon.ico" />
     <script src="Script-js/index.js" defer></script>
     <script defer src="Script-js/script.js"></script>
   </head>
-  <body >
+  <body>
     <header>
       <!--Logo-->
       <a href="Quem somos.html">
@@ -26,14 +26,14 @@
         <a href="artistas.html">
           <img
             src="Imagens/artistaIcon.png"
-            alt="Botão de ir pro Usúario"
+            alt="Botão de ir para artistas parceiros"
             tabindex="1"
             title="Nossos artistas"
         /></a>
         <a href="Quem somos.html">
           <img
             src="Imagens/Empresa.png"
-            alt="Botão de ir pro Usúario"
+            alt="Botão de ir pra Página Sobre a Tá que Tá"
             tabindex="1"
             title="Quem somos"
         /></a>
@@ -42,13 +42,13 @@
         <a href="index.html">
           <img
             src="Imagens/homeIcon.png"
-            alt="Botão de ir pro Usúario"
+            alt="Botão de ir para página inicial"
             title="Página inicial"
         /></a>
         <label id="label_submitpecas" for="submit_pecas">
           <img
             src="Imagens/carrinhoIcon.png"
-            alt=""
+            alt="Botão de ir para o carrinho"
             id="enviar_carrinho"
             title="carrinho de compras"
           />
@@ -143,7 +143,7 @@
       </div>
     </header>
     <main>
-      <div id="inicio" style="height: 20%;"></div>
+      <div id="inicio" style="height: 20%"></div>
       <h1>Tá Que Tá</h1>
       <!--peças na página inicial-->
       <h2 id="mensagem_selecao">Peças</h2>
@@ -152,7 +152,11 @@
         <div class="peca_home colecao_inverno">
           <div class="exibicao_hover_pecas">
             <label for="check1">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">M</p>
           </div>
@@ -174,7 +178,11 @@
         <div class="peca_home colecao_inverno">
           <div class="exibicao_hover_pecas">
             <label for="check2">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">P</p>
           </div>
@@ -196,7 +204,11 @@
         <div class="peca_home colecao_verao">
           <div class="exibicao_hover_pecas">
             <label for="check3">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">G</p>
           </div>
@@ -218,7 +230,11 @@
         <div class="peca_home colecao_verao">
           <div class="exibicao_hover_pecas">
             <label for="check4">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">G</p>
           </div>
@@ -240,7 +256,11 @@
         <div class="peca_home colecao_outono">
           <div class="exibicao_hover_pecas">
             <label for="check5">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">M</p>
           </div>
@@ -262,7 +282,11 @@
         <div class="peca_home colecao_outono">
           <div class="exibicao_hover_pecas">
             <label for="check6">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">GG</p>
           </div>
@@ -284,7 +308,11 @@
         <div class="peca_home colecao_primavera">
           <div class="exibicao_hover_pecas">
             <label for="check7">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">P</p>
           </div>
@@ -311,7 +339,11 @@
         <div class="peca_home colecao_primavera">
           <div class="exibicao_hover_pecas">
             <label for="check8">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">M</p>
           </div>
@@ -333,7 +365,11 @@
         <div class="peca_home colecao_afro">
           <div class="exibicao_hover_pecas">
             <label for="check9">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">PP</p>
           </div>
@@ -355,7 +391,11 @@
         <div class="peca_home colecao_afro">
           <div class="exibicao_hover_pecas">
             <label for="check10">
-              <img src="Imagens/carrinhoBrancoIcon.png" alt="" />
+              <img
+                src="Imagens/carrinhoBrancoIcon.png"
+                alt="adicionar item ao carrinho"
+                loading="lazy"
+              />
             </label>
             <p title="Tamanho">G</p>
           </div>
@@ -380,12 +420,16 @@
     <div id="caixa_login" style="display: none">
       <h1 style="display: inline">Login</h1>
       <label for="fechar_login">
-        <img class="botaofechar" src="Imagens/fecharIcon.png" alt=""
+        <img
+          class="botaofechar"
+          src="Imagens/fecharIcon.png"
+          alt="Fechar Login"
+          loading="lazy"
       /></label>
       <button id="fechar_login" style="display: none"></button>
       <form id="formulario" method="get" action="areaUsuário.html">
         <label for="nome_login"
-          ><img src="Imagens/inputNameIcon.png" alt="Nome"
+          ><img src="Imagens/inputNameIcon.png" alt="Nome" loading="lazy"
         /></label>
         <input
           type="text"
@@ -396,7 +440,7 @@
           placeholder="Digite seu nome"
         />
         <label for="senha_login">
-          <img src="Imagens/senhaIcon.png" alt="Senha"
+          <img src="Imagens/senhaIcon.png" alt="Senha" loading="lazy"
         /></label>
         <input
           type="password"
@@ -450,51 +494,61 @@
           id="emojis_avaliacao_1"
           class="emojis_avaliacao"
           src="Imagens/nota5Icon.png"
-          alt=""
+          alt="Ótimo"
           title="Ótimo"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_2"
           class="emojis_avaliacao"
           src="Imagens/nota4Icon.png"
-          alt=""
+          alt="Bom"
           title="Bom"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_3"
           class="emojis_avaliacao"
           src="Imagens/nota3Icon.png"
-          alt=""
+          alt="Mediano"
           title="Mediano"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_4"
           class="emojis_avaliacao"
           src="Imagens/nota2Icon.png"
-          alt=""
+          alt="Ruim"
           title="Ruim"
+          loading="lazy"
         />
         <img
           id="emojis_avaliacao_5"
           class="emojis_avaliacao"
           src="Imagens/nota1Icon.png"
-          alt=""
+          alt="Péssimo"
           title="Péssimo"
+          loading="lazy"
         />
       </div>
     </div>
     <!--Botão de voltar ao inicio da página-->
     <a id="botão-voltar" href="#inicio" title="Voltar para o início">
-      <img id="img-botão-voltar" src="Imagens/setaCima.png" alt="" />
+      <img
+        id="img-botão-voltar"
+        src="Imagens/setaCima.png"
+        alt="Voltar ao topo da página"
+      />
     </a>
     <!--Caixa de suporte-->
     <div id="Caixa_suporte" style="display: none">
       <h1>Suporte</h1>
       <img
+        loading="lazy"
         class="botaofechar"
         id="botao_fechar_suporte"
         src="Imagens/fecharIcon.png"
-        alt=""
+        alt="Fechar Suporte"
         style="right: 0%; position: absolute; width: 70px"
       />
       <div id="container_mensagens"></div>
@@ -510,22 +564,27 @@
         </button>
         <button id="botao_mensagem_4">Quero Denunciar uma situação.</button>
         <img
+          loading="lazy"
           id="apagar_historico"
           src="Imagens/lixeiraIcon.png"
-          alt=""
+          alt="Apagar Histórico"
           title="Apagar conversa com o suporte."
         />
       </div>
     </div>
 
     <div id="botão-suporte" title="Suporte">
-      <img id="img-botão-suporte" src="Imagens/suporteIcon.png" alt="" />
+      <img
+        id="img-botão-suporte"
+        src="Imagens/suporteIcon.png"
+        alt="Abrir Caixa de Suporte"
+      />
     </div>
     <!--Créditos-->
     <img
       id="creditos_toggle"
       src="Imagens/expandirCreditoIcon.png"
-      alt=""
+      alt="Exibir Créditos"
       title="Alterar visibilidade dos créditos"
     />
     <footer>
