--- a/Quem somos.html
+++ b/Quem somos.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>Quem somos</title>
-    <link rel="stylesheet preload" href="Estilos/Geral.css" media="all" />
+    <link rel="stylesheet preload" href="Estilos/Geral.css" media="all" as="style"/>
     <link rel="stylesheet" href="Estilos/quemsomos.css" />
-    <link rel="shortcut icon" href="Imagens/favicon.ico" />
+    <link rel="icon" href="Imagens/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
     <script defer src="Script-js/quemsomos.js"></script>
   </head>
   <body>
