--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     481 - 768 tablet
     769 - 1024 telas laptop
     1025 - 1200 pc -->
-    <link rel="stylesheet preload" href="Estilos/Geral.css" />
+    <link rel="stylesheet preload" href="Estilos/Geral.css" as="style"/>
     <link rel="stylesheet" href="Estilos/index.css" media="all" />
-    <link rel="shortcut icon" href="Imagens/favicon.ico" />
+    <link rel="icon" href="Imagens/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
     <script src="Script-js/index.js" defer></script>
     <script defer src="Script-js/script.js"></script>
   </head>
