--- a/areaUsuário.html
+++ b/areaUsuário.html
@@ -9,12 +9,26 @@
     481 - 768 tablet
     769 - 1024 telas laptop
     1025 - 1200 pc-->
-    <link rel="stylesheet preload" href="Estilos/Geral.css" as="style"/>
+    <link rel="stylesheet preload" href="Estilos/Geral.css" as="style" />
     <link rel="stylesheet" href="Estilos/areaUsuario.css" media="all" />
-    <link rel="icon" href="Imagens/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
+    <link rel="icon" href="Imagens/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imagens/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imagens/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imagens/favicon-16x16.png"
+    />
     <script defer src="Script-js/areaUsuario.js"></script>
     <script defer src="Script-js/script.js"></script>
   </head>
