--- a/artistas.html
+++ b/artistas.html
@@ -9,11 +9,26 @@
     481 - 768 tablet
     769 - 1024 telas laptop
     1025 - 1200 pc-->
-    <link rel="stylesheet preload" href="Estilos/Geral.css" media="all" as="style"/>
+    <link
+      rel="stylesheet preload"
+      href="Estilos/Geral.css"
+      media="all"
+      as="style"
+    />
     <link rel="stylesheet" href="Estilos/artista.css" />
-    <link rel="icon" href="Imagens/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
+    <link rel="icon" href="Imagens/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imagens/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imagens/favicon-16x16.png"
+    />
     <script defer src="Script-js/script.js"></script>
   </head>
   <body>
