--- a/carrinho.html
+++ b/carrinho.html
@@ -6,10 +6,24 @@
     <title>Carrinho de Compras</title>
     <link rel="stylesheet preload" href="Estilos/Geral.css" as="style" />
     <link rel="stylesheet" href="Estilos/carrinho.css" />
-    <link rel="icon" href="Imagens/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png" />
+    <link rel="icon" href="Imagens/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="imagens/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="imagens/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="imagens/favicon-16x16.png"
+    />
     <script defer src="Script-js/carrinho.js"></script>
     <script defer src="Script-js/script.js"></script>
   </head>
