alterando title e name dos elementos

--- a/Quem somos.html
+++ b/Quem somos.html
@@ -178,7 +178,12 @@
           placeholder="Digite sua senha"
         />
         <div id="container_revelarsenha">
-          <input type="checkbox" name="" id="botaorevelarsenha" />
+          <input
+            type="checkbox"
+            name="botaorevelarsenha"
+            id="botaorevelarsenha"
+            title="Revelar Senha"
+          />
           <label id="labelrevelarsenha" for="botaorevelarsenha"
             >Revelar senha</label
           >
