--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!--Nav com filtros para as peças da página-->
       <nav tabindex="1" title="Clique para abrir/fechar">Filtrar coleções!</nav>
       <div id="nav_aberta" style="height: 0%">
-        <input type="checkbox" name="" id="btnNavTodas" checked />
+        <input type="checkbox" name="btnNavTodas" id="btnNavTodas" checked />
         <label
           for="btnNavTodas"
           tabindex="1"
@@ -97,7 +97,12 @@
             <p>Coleções criadas por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavInverno" checked />
+        <input
+          type="checkbox"
+          name="btnNavInverno"
+          id="btnNavInverno"
+          checked
+        />
         <label
           for="btnNavInverno"
           tabindex="1"
@@ -109,7 +114,7 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavVerao" checked />
+        <input type="checkbox" name="btnNavVerao" id="btnNavVerao" checked />
         <label
           for="btnNavVerao"
           tabindex="1"
@@ -121,7 +126,7 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavOutono" checked />
+        <input type="checkbox" name="btnNavOutono" id="btnNavOutono" checked />
         <label
           for="btnNavOutono"
           tabindex="1"
@@ -133,7 +138,12 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavPrimavera" checked />
+        <input
+          type="checkbox"
+          name="btnNavPrimavera"
+          id="btnNavPrimavera"
+          checked
+        />
         <label
           for="btnNavPrimavera"
           tabindex="1"
@@ -145,7 +155,7 @@
             <p>Coleção criada por Beatriz</p>
           </div>
         </label>
-        <input type="checkbox" name="" id="btnNavAfro" checked />
+        <input type="checkbox" name="btnNavAfro" id="btnNavAfro" checked />
         <label
           for="btnNavAfro"
           tabindex="1"
@@ -470,7 +480,12 @@
           placeholder="Digite sua senha"
         />
         <div id="container_revelarsenha">
-          <input type="checkbox" name="" id="botaorevelarsenha" />
+          <input
+            type="checkbox"
+            name="botaorevelarsenha"
+            id="botaorevelarsenha"
+            title="Revelar Senha"
+          />
           <label id="labelrevelarsenha" for="botaorevelarsenha"
             >Revelar senha</label
           >
